dashboard ui changes

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -3,5 +3,15 @@
   "systems_administration": "إدارة الأنظمة",
   "my_systems": "أنظمتي",
   "new_alerts": "تنبيهات جديدة",
-  "general_advertisements":"إعلانات عامة"
+  "general_advertisements":"إعلانات عامة",
+  "academic_star": "نجم اكاديمي",
+  "go_to_the_najm_academy_platform":" الذهاب لمنصة نجم اكاديمي",
+  "daily_media_report": "التقرير الإعلامي اليومي",
+  "view_all": "عرض الجميع",
+  "communicate": "تـــــــواصــــــل",
+  "technical_support_requests": "طلبات الدعم الفني ",
+  "order_number": "رقم الطلب",
+  "order_status": "حالة الطلب",
+  "madar_requests": "طلبات مدار",
+  "tor_system_requests": "طلبات نظام طور"
 }
