--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -17,5 +17,6 @@
   "document_library": "مكتبة المستندات",
   "go_to_a_managed_system": "الذهاب الى نظام مدار",
   "technical_support_platform": "منصة الدعم الفني",
-  "create_a_new_mode_request": "إنشاء طلب طور جديد "
+  "create_a_new_mode_request": "إنشاء طلب طور جديد ",
+  "view_all_news": " عرض جميع الأخبار"
 }
