--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,5 +17,6 @@
   "document_library": "Document library",
   "go_to_a_managed_system": "Go to a managed system",
   "technical_support_platform": "Technical support platform",
-  "create_a_new_mode_request": "Create a new mode request"
+  "create_a_new_mode_request": "Create a new mode request",
+  "view_all_news": "View all news"
 }
