--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -18,5 +18,9 @@
   "go_to_a_managed_system": "الذهاب الى نظام مدار",
   "technical_support_platform": "منصة الدعم الفني",
   "create_a_new_mode_request": "إنشاء طلب طور جديد ",
-  "view_all_news": " عرض جميع الأخبار"
+  "view_all_news": " عرض جميع الأخبار",
+  "news_archive": "أرشيف الأخبار",
+  "search_here": "ابحث هنا",
+  "research": "بحث",
+  "news": "الأخبار"
 }
