--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,5 +18,9 @@
   "go_to_a_managed_system": "Go to a managed system",
   "technical_support_platform": "Technical support platform",
   "create_a_new_mode_request": "Create a new mode request",
-  "view_all_news": "View all news"
+  "view_all_news": "View all news",
+  "news_archive": "News archive",
+  "search_here": "Search here",
+  "research": "Research",
+  "news": "News"
 }
