--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -22,5 +22,9 @@
   "news_archive": "أرشيف الأخبار",
   "search_here": "ابحث هنا",
   "research": "بحث",
-  "news": "الأخبار"
+  "news": "الأخبار",
+  "communication": "تواصل",
+  "find_a_system": "ابحث عن نظام",
+  "our_new_stars": "نجومنا الجدد",
+  "your_current_leave_balance": "رصيد إجازاتك الحالي"
 }
