--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,5 +22,9 @@
   "news_archive": "News archive",
   "search_here": "Search here",
   "research": "Research",
-  "news": "News"
+  "news": "News",
+  "communication": "Communication",
+  "find_a_system": "Find a system",
+  "our_new_stars": "Our new stars",
+  "your_current_leave_balance": "Your current leave balance"
 }
