Employee list update
Employee list update

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -22,5 +22,6 @@
   "news_archive": "أرشيف الأخبار",
   "search_here": "ابحث هنا",
   "research": "بحث",
-  "news": "الأخبار"
+  "news": "الأخبار",
+  "joining_date":"تاريخ التحاق"
 }
