--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,5 +22,6 @@
   "news_archive": "News archive",
   "search_here": "Search here",
   "research": "Research",
-  "news": "News"
+  "news": "News",
+  "joining_date":"Joining Date"
 }
