--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -26,5 +26,9 @@
   "communication": "تواصل",
   "find_a_system": "ابحث عن نظام",
   "our_new_stars": "نجومنا الجدد",
-  "your_current_leave_balance": "رصيد إجازاتك الحالي"
+  "your_current_leave_balance": "رصيد إجازاتك الحالي",
+  "download_the_document": "تنزيل المستند",
+  "date_created": "تاريخ الانشاء",
+  "created_by": "إنشاء بواسطة",
+  "modification_date": "تاريخ التعديل "
 }
