--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,5 +26,9 @@
   "communication": "Communication",
   "find_a_system": "Find a system",
   "our_new_stars": "Our new stars",
-  "your_current_leave_balance": "Your current leave balance"
+  "your_current_leave_balance": "Your current leave balance",
+  "download_the_document": "Download the document",
+  "date_created": "Date created",
+  "created_by": "Created by",
+  "modification_date": "Modification date"
 }
